--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     MooseX::Types::Path::Class
 
 VERSION
-    version 0.002
+    version 0.003
 
 SYNOPSIS
       ### specification of type constraint with coercion
@@ -15,13 +15,13 @@ SYNOPSIS
 
       has filename => (
         is => 'ro',
-        isa => 'File',
+        isa => File,
         coerce => 1,
       );
 
       has directory => (
         is => 'ro',
-        isa => 'AbsDir',
+        isa => AbsDir,
         coerce => 1,
       );
 
@@ -76,8 +76,8 @@ SEE ALSO
 SUPPORT
   Bugs / Feature Requests
     Please report any bugs or feature requests through the issue tracker at
-    <http://rt.cpan.org/Public/Dist/Display.html?Name=MooseX-Types-Path-Clas
-    s-MoreCoercions>. You will be notified automatically of any progress on
+    <https://rt.cpan.org/Public/Dist/Display.html?Name=MooseX-Types-Path-Cla
+    ss-MoreCoercions>. You will be notified automatically of any progress on
     your issue.
 
   Source Code
@@ -86,7 +86,7 @@ SUPPORT
 
     <https://github.com/dagolden/moosex-types-path-class-morecoercions>
 
-      git clone https://github.com/dagolden/moosex-types-path-class-morecoercions.git
+      git clone git://github.com/dagolden/moosex-types-path-class-morecoercions.git
 
 AUTHOR
     David Golden <dagolden@cpan.org>
